--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
     }
     .close-btn {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background: #0057E1;
       color: #fff;
       border: none;
@@ -91,6 +92,8 @@
       height: 50px;
       cursor: pointer;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      z-index: 101;
+}
     }
     iframe {
       width: 100%;
