--- a/index.html
+++ b/index.html
@@ -80,20 +80,21 @@
     }
     .close-btn {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 10px;
+      right: 10px;
       background: #0057E1;
-      color: #fff;
+      color: #ffffff;
       border: none;
       font-size: 32px;
+      cursor: pointer;
       border-radius: 50%;
       width: 50px;
       height: 50px;
-      cursor: pointer;
+      display: flex;              
+      align-items: center;       
+      justify-content: center;   
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
       z-index: 101;
-}
     }
     iframe {
       width: 100%;
